--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "This will create an Assistant called MathTutor",
   "main": "mathTutor.js",
-  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
@@ -12,6 +11,7 @@
   "author": "jrw@mit.edu",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "openai": "^4.17.4"
