--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "openai": "^4.17.4"
+    "fs": "^0.0.1-security",
+    "openai": "^4.17.4",
+    "path": "^0.12.7",
+    "url": "^0.11.3"
   }
 }
