--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "langchain": "^0.0.214",
     "openai": "^4.17.4",
     "path": "^0.12.7",
-    "url": "^0.11.3",
-    "lanchain": "^1.0.0"
+    "url": "^0.11.3"
   }
 }
