--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "langchain": "^0.0.214",
     "openai": "^4.17.4",
     "path": "^0.12.7",
+    "pupeteer": "^0.0.1",
     "url": "^0.11.3"
   }
 }
