--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "openai": "^4.17.4",
     "path": "^0.12.7",
     "pupeteer": "^0.0.1",
+    "puppeteer": "^19.11.1",
     "url": "^0.11.3"
   }
 }
