--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.2",
+    "csv-parser": "^3.0.0",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "langchain": "^0.0.214",
+    "natural": "^6.10.4",
+    "node-html-parser": "^6.1.12",
     "openai": "^4.17.4",
     "path": "^0.12.7",
     "pupeteer": "^0.0.1",
