--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "jrw@mit.edu",
   "license": "MIT",
   "dependencies": {
+    "@mistralai/mistralai": "^0.1.3",
     "axios": "^1.6.2",
     "csv-parser": "^3.0.0",
     "csv-writer": "^1.6.0",
