--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "assistants",
   "version": "1.0.0",
   "description": "This will create an Assistant",
+  "type": "module", 
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "type": "module"
+    "start": "node server.js"
   },
   "author": "jrw@mit.edu",
   "license": "MIT",
