--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "assistants",
   "version": "1.0.0",
   "description": "This will create an Assistant",
-  "type": "module", 
+  "type": "module",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,6 +11,7 @@
   "author": "jrw@mit.edu",
   "license": "MIT",
   "dependencies": {
+    "@langchain/openai": "^0.0.15",
     "@mistralai/mistralai": "^0.1.3",
     "axios": "^1.6.2",
     "csv-parser": "^3.0.0",
